--- a/src/templates/includes/footer.jade
+++ b/src/templates/includes/footer.jade
@@ -2,6 +2,7 @@
     .b-call-widget__button
     .b-call-widget__content
         iframe#callbackFrame(src='http://82.193.158.2:3002/widget.html')
+    a.b-call-widget__link(href='https://tolkunov.com/order') Заказать
 script.
     /* When iframe is loaded */
     $(function () {
