--- a/src/blocks/b-client/b-client.less
+++ b/src/blocks/b-client/b-client.less
@@ -9,29 +9,50 @@
 .b-client__head {
 	display: flex;
 	flex-flow: row wrap;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: center;
-	margin-top: 6px - 15px - 10px;
+	margin-top: 6px - 15px - 10px - 15px;
 	margin-bottom: -15px;
 }
 
 .b-client__image {
-	margin: 15px 25px;
-	max-height: 50px;
+	margin: 15px 30px 15px 0;
+	max-width: 160px;
+	max-height: 27px;
+
+	@media (min-width: @screen-md-min) {
+		margin-right: 40px;
+
+		max-width: 200px;
+		max-height: 33px;
+	}
 }
 
 .b-client__link {
-	.my-heading-lead();
 	.my-default-link();
-	line-height: 1.2;
-	margin: 15px 25px;
+	line-height: 1.6; // right value is 1.3, but 1.6 have good padding from bottom border;
+	font-weight: 600;
+	letter-spacing: 2.5px;
+	margin: 15px 0;
 	display: inline-block;
 	white-space: nowrap;
+	text-transform: uppercase;
+
+	font-size: 11px;
+
+	@media (min-width: @screen-md-min) {
+		font-size: 13px;
+	}
 }
 
 .b-client__text {
 	.my-heading-lead();
-	line-height: 1.2;
-	margin-top: 100px;
+	line-height: 1.3;
+	font-weight: 400;
+	margin-top: 50px;
 	margin-bottom: 20px;
+
+	@media (min-width: @screen-md-min) {
+
+	}
 }
