--- a/src/blocks/b-filter/b-filter.less
+++ b/src/blocks/b-filter/b-filter.less
@@ -3,7 +3,6 @@
 @import "mymixins";
 
 .b-filter {
-	text-align: center;
 	margin-bottom: 50px;
 }
 
@@ -32,6 +31,18 @@
 		.b-filter__title {
 			border-bottom-color: @block-link-hover-border-color;
 		}
+	}
+
+	&:first-child {
+		padding-left: 0;
+	}
+
+	&:last-child {
+		padding-right: 0;
+	}
+
+	&.swiper-slide {
+		width: auto;
 	}
 }
 
