--- a/src/blocks/b-reviews-filter/b-reviews-filter.less
+++ b/src/blocks/b-reviews-filter/b-reviews-filter.less
@@ -2,7 +2,6 @@
 @import "mixins";
 
 .b-reviews-filter {
-	text-align: center;
 }
 
 .b-reviews-filter__item {
@@ -12,6 +11,14 @@
 	margin: 10px 20px;
 	display: inline-block;
 	position: relative;
+
+	&:first-child {
+		margin-left: 0;
+	}
+
+	&.swiper-slide {
+		width: auto;
+	}
 
 	&:not(.b-reviews-filter__item_active) .b-reviews-filter__title {
 		border-bottom-color: @block-link-border-color;
