--- a/src/blocks/b-size-tabs/b-size-tabs.less
+++ b/src/blocks/b-size-tabs/b-size-tabs.less
@@ -1,11 +1,17 @@
 @import "variables.less";
 @import "mixins";
 @import "mymixins";
+@import "type";
 
 .b-size-tabs {
-	text-align: center;
+	//text-align: center;
 	margin-top: 6px;
 	margin-bottom: 36px;
+
+	margin-left: -5px;
+	margin-right: -5px;
+
+	.list-unstyled();
 }
 
 .b-size-tabs__item {
@@ -53,9 +59,6 @@
 }
 
 .b-size-tabs__divider {
-	//position: relative;
-	//top: -1px;
-	//left: 1px;
 	margin-left: 3px;
 	margin-right: 5px;
 	text-transform: uppercase;
