--- a/src/blocks/g-loader/g-loader.less
+++ b/src/blocks/g-loader/g-loader.less
@@ -56,33 +56,30 @@
 }
 
 .g-loader__link {
+	display: block;
+	width: 100%;
 	font-weight: bold;
-	letter-spacing: .1em;
 	text-transform: uppercase;
-	padding: 17px 25px;
-	border-radius: 54px/2;
-	font-size: 14px;
-	line-height: 1.2;
+	letter-spacing: 1px;
+	padding: 23px 25px;
+	border-radius: 100px;
+	font-size: 16px;
+	line-height: 2;
 
 	transition: all .2s;
 
-	@media (min-width: @grid-float-breakpoint) {
-		padding: 17px 45px;
-		font-size: 16px;
+	@media (min-width: @screen-md-min) {
+		padding: 21px 45px;
+		font-size: 18px;
+	}
+
+	@media (min-width: @screen-xl-min) {
+		font-size: 20px;
 	}
 
 	&.btn-info {
-		box-shadow: 0 8px 24px fade(#2856f6, 40%);
+		box-shadow: 0 10px 40px 10px rgba(40, 86, 246, 0.3); //0 8px 24px fade(#2856f6, 40%);
 	}
-
-	&:hover, &:active, &:focus {
-		transform: scale(1.05);
-	}
-}
-
-.g-loader__text {
-	color: @text-color;
-	margin: 50px 15px 0;
 }
 
 .g-loader__button {
@@ -106,10 +103,6 @@
 		background-color: #9ba1b6;
 		color: #d9dbe6;
 		text-decoration: none;
-
-		.g-loader__button-text {
-			//border-color: #2ecc71;
-		}
 	}
 }
 
