--- a/src/less/bootstrap/grid.less
+++ b/src/less/bootstrap/grid.less
@@ -10,6 +10,9 @@
 .container {
   .container-fixed();
 
+  @media (min-width: @screen-sm-min) {
+    width: @container-sm;
+  }
   @media (min-width: @screen-md-min) {
     width: @container-md;
   }
