--- a/src/less/bootstrap/variables.less
+++ b/src/less/bootstrap/variables.less
@@ -53,7 +53,7 @@
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-@font-family-primary:     "webfontregular", "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-primary:     "TTNorms", "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
@@ -297,7 +297,7 @@
 
 // Extra small screen / phone
 //** Deprecated `@screen-xs` as of v3.0.1
-@screen-xs:                  320px;//480px;
+@screen-xs:                  (320px + @grid-gutter-width);//480px;
 //** Deprecated `@screen-xs-min` as of v3.2.0
 @screen-xs-min:              @screen-xs;
 //** Deprecated `@screen-phone` as of v3.0.1
@@ -305,27 +305,27 @@
 
 // Small screen / tablet
 //** Deprecated `@screen-sm` as of v3.0.1
-@screen-sm:                  480px;//768px;
+@screen-sm:                  (480px + @grid-gutter-width);//768px;
 @screen-sm-min:              @screen-sm;
 //** Deprecated `@screen-tablet` as of v3.0.1
 @screen-tablet:              @screen-sm-min;
 
 // Medium screen / desktop
 //** Deprecated `@screen-md` as of v3.0.1
-@screen-md:                  768px;//992px;
+@screen-md:                  (640px + @grid-gutter-width);//768px;//992px;
 @screen-md-min:              @screen-md;
 //** Deprecated `@screen-desktop` as of v3.0.1
 @screen-desktop:             @screen-md-min;
 
 // Large screen / wide desktop
 //** Deprecated `@screen-lg` as of v3.0.1
-@screen-lg:                  992px;//1200px;
+@screen-lg:                  (960px + @grid-gutter-width);//992px;//1200px;
 @screen-lg-min:              @screen-lg;
 //** Deprecated `@screen-lg-desktop` as of v3.0.1
 @screen-lg-desktop:          @screen-lg-min;
 
 // Extra large screen
-@screen-xl:                  1200px;
+@screen-xl:                  (1200px + @grid-gutter-width);
 @screen-xl-min:              @screen-xl;
 @screen-xl-desktop:          @screen-xl-min;
 
@@ -355,18 +355,20 @@
 //
 //## Define the maximum width of `.container` for different screen sizes.
 
+@container-sm:                 @screen-sm;
+
 // Small screen / tablet
-@container-tablet:             (720px + @grid-gutter-width);
+@container-tablet:             @screen-md;//(720px + @grid-gutter-width);
 //** For `@screen-sm-min` and up.
 @container-md:                 @container-tablet;
 
 // Medium screen / desktop
-@container-desktop:            (940px + @grid-gutter-width);
+@container-desktop:            @screen-lg;//(940px + @grid-gutter-width);
 //** For `@screen-md-min` and up.
 @container-lg:                 @container-desktop;
 
 // Large screen / wide desktop
-@container-large-desktop:      (1000px + @grid-gutter-width);//(1140px + @grid-gutter-width);
+@container-large-desktop:      @screen-xl;//(1000px + @grid-gutter-width);//(1140px + @grid-gutter-width);
 //** For `@screen-lg-min` and up.
 @container-xl:                 @container-large-desktop;
 
