--- a/src/less/mymixins.less
+++ b/src/less/mymixins.less
@@ -25,63 +25,59 @@
 	}
 }
 
+// Заголовок
 .my-heading-h1() {
-	font-size: 47px;
+	font-size: 54px;
+	font-weight: bold;
 
 	@media (min-width: @screen-md-min) {
-		font-size: 58px;
+		font-size: 70px;
 	}
 
-	@media (min-width: @grid-float-breakpoint) {
-		font-size: 64px;
+	@media (min-width: @screen-xl-min) {
+		font-size: 80px;
 	}
 }
 
+// Подзаголовок
 .my-heading-h2() {
-	font-size: 40px;
+	font-size: 50px;
+	font-weight: bold;
 
 	@media (min-width: @screen-md-min) {
-		font-size: 48px;
+		font-size: 60px;
 	}
 
-	@media (min-width: @grid-float-breakpoint) {
-		font-size: 52px;
+	@media (min-width: @screen-xl-min) {
+		font-size: 70px;
 	}
 }
 
+// Описание к заголовку
 .my-heading-lead() {
-	font-size: 20px;
+	font-size: 22px;
+	font-weight: normal;
 
 	@media (min-width: @screen-md-min) {
-		font-size: 24px;
-	}
-
-	@media (min-width: @grid-float-breakpoint) {
 		font-size: 26px;
 	}
+
+	@media (min-width: @screen-xl-min) {
+		font-size: 28px;
+	}
 }
 
+// Описание к подзаголовку
 .my-heading-h3() {
 	font-size: 18px;
+	font-weight: normal;
 
 	@media (min-width: @screen-md-min) {
 		font-size: 20px;
 	}
 
-	@media (min-width: @grid-float-breakpoint) {
-		font-size: 24px;
-	}
-}
-
-.my-heading-h4() {
-	font-size: 16px;
-
-	@media (min-width: @screen-md-min) {
-		font-size: 18px;
-	}
-
-	@media (min-width: @grid-float-breakpoint) {
-		font-size: 20px;
+	@media (min-width: @screen-xl-min) {
+		font-size: 22px;
 	}
 }
 
