--- a/src/templates/includes/head.jade
+++ b/src/templates/includes/head.jade
@@ -8,14 +8,15 @@ head
 
     block styles
         link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow', type='text/css')
-        link(rel='stylesheet', href='assets/fonts/stylesheet.css')
+        //link(rel='stylesheet', href='assets/fonts/stylesheet.css')
         link(rel='stylesheet', href='assets/css/bootstrap.min.css')
         link(rel='stylesheet', href='assets/vendor/slick-carousel/slick/slick.css')
         link(rel='stylesheet', href='assets/vendor/slick-carousel/slick/slick-theme.css')
         link(rel='stylesheet', href='assets/vendor/fancybox/source/jquery.fancybox.css?v=2.1.5', media='screen')
         //link(rel='stylesheet', href='assets/vendor/fancybox/source/helpers/jquery.fancybox-thumbs.css?v=2.1.5', media='screen')
-        link(rel='stylesheet', href='assets/vendor/odometer/themes/odometer-theme-minimal.css')
+        //link(rel='stylesheet', href='assets/vendor/odometer/themes/odometer-theme-minimal.css')
         link(rel='stylesheet', href='assets/vendor/jquery.scrollbar/jquery.scrollbar.css')
+        link(rel='stylesheet', href='assets/vendor/swiper/dist/css/swiper.min.css')
         link(rel='stylesheet', href='assets/css/common.min.css')
 
     block scripts
@@ -29,6 +30,6 @@ head
         script(src='assets/vendor/fancybox/source/helpers/jquery.fancybox-media.js')
         //script(src='assets/vendor/fancybox/source/helpers/jquery.fancybox-thumbs.js')
         script(src='assets/vendor/jquery.scrollbar/jquery.scrollbar.min.js')
-        //script(src='assets/vendor/odometer/odometer.min.js')
+        script(src='assets/vendor/swiper/dist/js/swiper.min.js')
         script(src='assets/js/emerge.js')
         script(src='assets/js/script.js')
