--- a/src/templates/portfolio_item.jade
+++ b/src/templates/portfolio_item.jade
@@ -5,7 +5,7 @@ block content
         .container
             .b-portfolio-item__date 2 марта 2016
 
-            h1.b-page__title.b-page__title_small #[a.b-page__link(href="#") Флеш-баннер] для #[a.b-page__link(href="client.html") Exante]#[br]«Лучший брокер»
+            h1.b-page__title.b-page__title_small #[a.b-page__link(href="#") Флеш-баннер] для #[a.b-page__link(href="client.html") Exante] «Лучший брокер»
 
             .b-language-tabs
                 ul.b-language-tabs__list(role="tablist")
@@ -16,7 +16,7 @@ block content
             .b-portfolio-item
                 .tab-content
                     #banner_language_ru.tab-pane.active(role="tabpanel")
-                        ul.b-size-tabs.list-unstyled
+                        ul.b-size-tabs
                             li.b-size-tabs__item.active(role="presentation"): a.b-size-tabs__link(href='#banner_language_ru_size_240_400', aria-controls="banner_language_ru_size_240_400", role="tab", data-toggle="tab") 240#[span.b-size-tabs__divider x]400
                             li.b-size-tabs__item(role="presentation"): a.b-size-tabs__link(href='#banner_language_ru_size_100_100', aria-controls="banner_language_ru_size_100_100", role="tab", data-toggle="tab") 100#[span.b-size-tabs__divider x]100
                             li.b-size-tabs__item(role="presentation"): a.b-size-tabs__link(href='#banner_language_ru_size_200_300', aria-controls="banner_language_ru_size_200_300", role="tab", data-toggle="tab") 1200#[span.b-size-tabs__divider x]300
@@ -26,9 +26,9 @@ block content
                         .tab-content
                             #banner_language_ru_size_240_400.tab-pane.active(role="tabpanel")
                                 .b-portfolio-item__view
-                                    .b-portfolio-item__border(style="width:1200px;height:90px;border:5px solid black;margin-top:-5px;")
+                                    .b-portfolio-item__border(style="width:1100px;height:90px;border:5px solid black;margin-top:-5px;")
                                     .b-portfolio-item__scroll.scrollbar-light
-                                        img.b-portfolio-item__image(src='http://placehold.it/1200x90', alt='')
+                                        img.b-portfolio-item__image(src='http://placehold.it/1100x90', alt='')
                             #banner_language_ru_size_100_100.tab-pane(role="tabpanel")
                                 .b-portfolio-item__view
                                     .b-portfolio-item__border(style="width:728px;height:90px;border:5px solid black;margin-top:-5px;")
@@ -50,7 +50,7 @@ block content
                                 .b-portfolio-item__view
                                     video.b-portfolio-item__video(preload='auto', controls, autoplay, loop, controlsList="nodownload", src="https://s1.2myshows.me:8443/12.monkeys/s01/12.Monkeys.S01E01.1080p.rus.LostFilm.TV.720p.mp4")
                     #banner_language_en.tab-pane(role="tabpanel")
-                        ul.b-size-tabs.list-unstyled
+                        ul.b-size-tabs
                             li.b-size-tabs__item.active(role="presentation"): a.b-size-tabs__link(href='#banner_language_en_size_240_400', aria-controls="banner_language_en_size_240_400", role="tab", data-toggle="tab") 240#[span.b-size-tabs__divider x]400
                             li.b-size-tabs__item(role="presentation"): a.b-size-tabs__link(href='#banner_language_en_size_100_100', aria-controls="banner_language_en_size_100_100", role="tab", data-toggle="tab") 100#[span.b-size-tabs__divider x]100
                             li.b-size-tabs__item(role="presentation"): a.b-size-tabs__link(href='#banner_language_en_size_200_300', aria-controls="banner_language_en_size_200_300", role="tab", data-toggle="tab") 200#[span.b-size-tabs__divider x]300
