--- a/src/templates/portfolio_type_1.jade
+++ b/src/templates/portfolio_type_1.jade
@@ -2,33 +2,38 @@ extends ./layouts/layout.jade
 
 block content
     .b-page
-        .b-portfolio-filter.b-portfolio__filter
-            span.b-portfolio-filter__head-label
-                span ФИЛЬТР ПО ТИПУ БАННЕРОВ
-            .b-portfolio-filter__container
-                .b-portfolio-filter__inner
-                    a.b-portfolio-filter__item.b-portfolio-filter__item_type_all.b-portfolio-filter__item_active(href='#')
-                        span.b-portfolio-filter__title Все
-                        span.b-portfolio-filter__count 985
-                    a.b-portfolio-filter__item.b-portfolio-filter__item_type_html5(href='#')
-                        span.b-portfolio-filter__title HTML5
-                        span.b-portfolio-filter__count 128
-                    a.b-portfolio-filter__item.b-portfolio-filter__item_type_gif(href='#')
-                        span.b-portfolio-filter__title GIF
-                        span.b-portfolio-filter__count 191
-                    a.b-portfolio-filter__item.b-portfolio-filter__item_type_jpg(href='#')
-                        span.b-portfolio-filter__title JPG
-                        span.b-portfolio-filter__count 266
+        .container
+            .b-portfolio-filter.b-portfolio__filter
+                span.b-portfolio-filter__head-label
+                    span ФИЛЬТР ПО ТИПУ БАННЕРОВ
+                .b-portfolio-filter__container
+                    .b-portfolio-filter__inner
+                        a.b-portfolio-filter__item.b-portfolio-filter__item_type_all.b-portfolio-filter__item_active(href='#')
+                            span.b-portfolio-filter__title Все
+                            span.b-portfolio-filter__count 985
+                        a.b-portfolio-filter__item.b-portfolio-filter__item_type_html5(href='#')
+                            span.b-portfolio-filter__title HTML5
+                            span.b-portfolio-filter__count 128
+                        a.b-portfolio-filter__item.b-portfolio-filter__item_type_gif(href='#')
+                            span.b-portfolio-filter__title GIF
+                            span.b-portfolio-filter__count 191
+                        a.b-portfolio-filter__item.b-portfolio-filter__item_type_jpg(href='#')
+                            span.b-portfolio-filter__title JPG
+                            span.b-portfolio-filter__count 266
 
-        .b-filter
-            a.b-filter__item.b-filter__item_active(href='portfolio_type_1.html'): span.b-filter__title Последние
-            a.b-filter__item(href='portfolio_type_2.html'): span.b-filter__title Любимые
-            a.b-filter__item.b-filter__item_with-arrow(href='portfolio_type_3.html'): span.b-filter__title По темам
-            a.b-filter__item.b-filter__item_with-arrow(href='portfolio_type_4.html'): span.b-filter__title По размерам
-            a.b-filter__item.b-filter__item_with-arrow(href='portfolio_type_5.html'): span.b-filter__title По стилям
+            div
+                .b-filter.swiper-container
+                    .swiper-wrapper
+                        a.swiper-slide.b-filter__item.b-filter__item_active(href='portfolio_type_1.html'): span.b-filter__title Все
+                        a.swiper-slide.b-filter__item(href='#'): span.b-filter__title По типу
+                        a.swiper-slide.b-filter__item.b-filter__item_with-arrow(href='#'): span.b-filter__title По темам
+                        a.swiper-slide.b-filter__item.b-filter__item_with-arrow(href='portfolio_type_4.html'): span.b-filter__title По размерам
+                        a.swiper-slide.b-filter__item.b-filter__item_with-arrow(href='portfolio_type_5.html'): span.b-filter__title По стилям
+                        a.swiper-slide.b-filter__item.b-filter__item_with-arrow(href='#'): span.b-filter__title По площадкам
 
         .b-portfolio
-            h1.b-portfolio__header В портфолио 985 баннеров
+            .container
+                h1.b-portfolio__header В портфолио 985 баннеров
 
             .b-portfolio__list
                 - for (var i=0; i<13;++i)
